--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-Mi portfolio
+<!DOCTYPE HTML>
+<!--
+	Overflow by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Alex Torrico - Portfolio</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery.scrolly.min.js"></script>
+		<script src="js/jquery.poptrox.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+		</noscript>
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	</head>
+	<body>
+
+		<!-- Header -->
+			<section id="header">
+				<header>
+					<h1>Proyecto Torneos</h1>
+					<p>Desarrollado por Alex Torrico y Sergio Veizaga</p>
+				</header>
+				<footer>
+					 <form method="get" action="file-download/calcFerring.docx">						
+						<div class="row">
+							<div class="12u">
+								<ul class="actions">
+									<li><input type="submit" value="Descargar apk" /></li>
+								</ul>
+							</div>
+						</div>
+					</form>
+				</footer>
+			</section>
+		
+		<section id="footer">
+			<ul class="icons">
+				<li>
+					<a href="mailto:alex6tc90@gmail.com" class="icon fa-google"><span class="label">Gmail</span></a>
+					<span>alex6tc90@gmail.com</span>
+				</li>
+				<li>
+					<a href="tel:+54 9 - 2804404497" class="icon fa-phone"><span class="label">Telefono</span></a>
+					<span>2804404497</span>
+				</li>
+			</ul>
+			
+			<div class="copyright">
+				<ul class="menu">
+					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</div>
+		</section>
+
+	</body>
+</html>
