--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Alex Torrico - Portfolio</title>
+		<link rel="icon" type="image/png" href="images/favicon.png">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -31,7 +32,7 @@
 					<p>Desarrollado por Alex Torrico y Sergio Veizaga</p>
 				</header>
 				<footer>
-					 <form method="get" action="file-download/calcFerring.docx">						
+					 <form method="get" action="file-download/proy-torneos.apk">						
 						<div class="row">
 							<div class="12u">
 								<ul class="actions">
@@ -42,8 +43,26 @@
 					</form>
 				</footer>
 			</section>
-		
+
+		<!-- Banner -->
+		<section id="banner">
+			<header>
+				<h2>¿Cómo instalarlo?</h2>
+			</header>
+			<ul>
+				<li><b>Descarga el apk</b></li>
+				<li><b>Habilita la opción: <i>"Ajustes->Seguridad->Orígenes desconocidos"</i></b></li>
+				<li><h4>Ya puedes instalar!</h4></li>
+			</ol>
+			<footer>
+				<p><b>Requisitos:</b> Android Lollipop 5.0.1</p>
+			</footer>
+		</section>
+
+		<!-- Footer -->
 		<section id="footer">
+			<h2>Contacto</h2>
+			<br>
 			<ul class="icons">
 				<li>
 					<a href="mailto:alex6tc90@gmail.com" class="icon fa-google"><span class="label">Gmail</span></a>
