Agregado 2do mail de contacto.

--- a/index.html
+++ b/index.html
@@ -61,19 +61,17 @@
 
 		<!-- Footer -->
 		<section id="footer">
-			<h2>Contacto</h2>
+			<h2><b>Contacto</b></h2>
 			<br>
-			<ul class="icons">
+			<ul>
 				<li>
-					<a href="mailto:alex6tc90@gmail.com" class="icon fa-google"><span class="label">Gmail</span></a>
-					<span>alex6tc90@gmail.com</span>
+					<a href="mailto:alex6tc90@gmail.com">alex6tc90@gmail.com</a>
 				</li>
 				<li>
-					<a href="tel:+54 9 - 2804404497" class="icon fa-phone"><span class="label">Telefono</span></a>
-					<span>2804404497</span>
+					<a href="mailto:sergio19101992@gmail.com">sergio19101992@gmail.com</a>
 				</li>
 			</ul>
-			
+			<br>
 			<div class="copyright">
 				<ul class="menu">
 					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
